--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
-body
-{
- background-color:cyan;
+body{
+ background:#FFFFCC;
+ color:#333;
+ width:100%;
+ font-family:sans-serif;
+ margin:0 auto;
 }
+
